@@ -58,9 +58,6 @@ namespace ProcessHacker
 
         private void buttonClose_Click(object sender, EventArgs e)
         {
-            if (checkShowProcessDomains.Checked != Properties.Settings.Default.ShowProcessDomains)
-                Program.HackerWindow.ReloadProcessList();
-
             Properties.Settings.Default.WarnDangerous = checkWarnDangerous.Checked;
             Properties.Settings.Default.ShowProcessDomains = checkShowProcessDomains.Checked;
 
